# joi

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  langgraph.json  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: docker-publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/milestones/v1.0-phases/01-codebase-alignment-audit/: 01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md  AUDIT.md
.planning/milestones/v1.0-phases/02-eval-framework/: 02-02-PLAN.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-app-like-variant-design/: 03-01-SUMMARY.md
.planning/milestones/v1.0-phases/04-isolated-variable-experiments/: 04-02-PLAN.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/milestones/v1.0-phases/05-full-comparison/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  EXPLORATION.md
.planning/milestones/v1.0-phases/06-adr-and-decision/: 06-01-PLAN.md  06-01-SUMMARY.md  06-VERIFICATION.md
.planning/phases/01-codebase-alignment-audit/: 01-01-PLAN.md  01-01-SUMMARY.md  AUDIT.md
.planning/phases/02-eval-framework/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-RESEARCH.md
.planning/phases/03-app-like-variant-design/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-isolated-variable-experiments/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-full-comparison/: 05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md  EXPLORATION.md
.planning/phases/07-infrastructure-fixes/: 07-01-PLAN.md  07-01-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-experiment-harness/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-run-experiments/: 09-01-PLAN.md  09-01-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-review-and-adr/: 10-01-PLAN.md  10-01-SUMMARY.md  10-CONTEXT.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/quick/1-research-task-subsystem-differentiators-/: 1-PLAN.md  DIFFERENTIATORS-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: adr-dev-workflow-tooling.md  adr-tool-interface-experiment.md  agent-frameworks-comparison.md  agent-patterns.md  agent_design_issues.md  architecture.md  brainstorm-applike-research-leads.md  brainstorm-guide.md  dev-workflow.md  eval-failure-analysis.md  ideation-self-extending-agent.md  mas-patterns.md  mcp-patterns.md  plan-joi-v2.md  prompt-caching.md  python_standards.md  requirements - agent.md  requirements - mcp.md  research-guardrails.md  strategic-context.md  tasks-research.md  todo-background-tasks.md
results/: applike_run1_20260220_014556.jsonl  applike_run2_20260220_014556.jsonl  applike_run3_20260220_014556.jsonl  baseline_run1_20260220_014556.jsonl  baseline_run2_20260220_014556.jsonl  baseline_run3_20260220_014556.jsonl
scripts/: analyze_experiment.py  e2e.py  session.sh
src/joi_agent/: media_agent.py  media_persona.md  persona.md  server.py
src/joi_agent_langgraph/: config.py  graph.py  tools.py
src/joi_agent_langgraph2/: config.py  delegates.py  graph.py  interpreter.py  media_persona.md  memory.py  persona.md  tools.py  transcribe.py
src/joi_agent_langgraph2/calendar/: models.py  store.py  tools.py
src/joi_agent_langgraph2/tasks/: execution.py  models.py  store.py  store_sdk.py  tools.py
src/joi_langgraph_client/: client.py  protocol.py  session.py  types.py
src/joi_langgraph_client/tasks/: task_client.py
src/joi_mcp/: config.py  jackett.py  pagination.py  query.py  schema.py  server.py  tmdb.py  transmission.py
src/joi_telegram/: main.py
src/joi_telegram_langgraph/: app.py  handlers.py  main.py  notifier.py  stream.py  ui.py
tests/: conftest.py
tests/e2e/: conftest.py  test_scenarios.py
tests/eval/: conftest.py  evaluators.py  parity_matrix.md  stats.py  test_tasks.py  token_budget.py
tests/eval/reports/: latest.json  phase4_summary.md
tests/eval/scenarios/: tasks_negative.yaml  tasks_positive.yaml
tests/eval/variants/: registry.py  tasks_applike.py  tasks_baseline.py  tasks_description_a.py  tasks_description_b.py  tasks_rename.py  tasks_simplify.py
tests/experiment/: capture.py  conftest.py  parity.py  scenarios.py  test_experiment.py
tests/experiment/variants/: applike.py  baseline.py  registry.py
tests/joi_agent_langgraph2/: test_media_routing.py  test_memory.py  test_observation_masking.py  test_routing.py  test_task_scheduling_eval.py
tests/joi_agent_langgraph2/test_tasks/: test_execution.py  test_models.py  test_notifier.py  test_store.py  test_tools.py
tests/joi_mcp/: test_jackett.py  test_jackett_unit.py  test_pagination_unit.py  test_query.py  test_tmdb.py  test_tmdb_unit.py  test_tool_schemas.py  test_transmission.py  test_transmission_unit.py
tests/joi_mcp/cassettes/test_jackett/: TestJackettContract.test_get_torrent_returns_details.yaml  TestJackettContract.test_search_torrents_general.yaml  TestJackettContract.test_search_torrents_movie.yaml  TestJackettContract.test_search_torrents_tv.yaml  TestJackettContract.test_search_with_filter.yaml
tests/joi_mcp/cassettes/test_tmdb/: TestTMDBContract.test_find_by_name.yaml  TestTMDBContract.test_get_recommendations.yaml  TestTMDBContract.test_get_similar.yaml  TestTMDBContract.test_list_by_genre.yaml  (+5 more)
tests/joi_mcp/snapshots/: jackett.json  tmdb.json  transmission.json
tests/joi_telegram_langgraph/: test_ui.py
(+9 files in other folders)
